<resources>

    <string name="app_name">Gamer app</string>
    <string name="input_email">Email</string>
    <string name="input_phone">Phone</string>
    <string name="input_password">Password</string>
    <string name="input_confirm_password">Confirm Password</string>
    <string name="input_full_name">Full Name</string>


    <string name="txt_or">OR</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="txt_reset">Please enter your email to reset your password</string>
    <string name="txt_verification_code">Enter the received code</string>
    <string name="txt_unreception">Did not receive a verification code ?</string>
    <string name="txt_new_password">Create your new password</string>
    <string name="txt_confirm_password">Please enter your new password and confirm it</string>

    <string name="btn_register">Register Now</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_submit_pwd">Submit</string>
    <string name="btn_remember_me">Remember Me</string>
    <string name="btn_forget_password">Forget Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_accept_terms">Agree to our terms and conditions</string>
    <string name="btn_send_sms">Send SMS</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_resend">Resend code</string>
    <string name="title_activity_confirm_password">confirm_password</string>
</resources>