<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forget_password">

    <TextView
        android:id="@+id/forgot_txt"
        android:layout_width="356dp"
        android:layout_height="35dp"
        android:text="@string/txt_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:id="@+id/forgot_txt2"
        android:layout_width="356dp"
        android:layout_height="35dp"
        android:text="@string/txt_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="102dp" />

    <TextView
        android:id="@+id/email_reset"
        android:layout_width="356dp"
        android:layout_height="35dp"
        android:text="@string/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/or2_txt"
        android:layout_width="356dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/txt_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="268dp" />

    <Button
        android:id="@+id/submitv_btn"
        android:layout_width="182dp"
        android:layout_height="41dp"
        android:text="@string/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="211dp" />

    <Button
        android:id="@+id/sms_btn"
        android:layout_width="182dp"
        android:layout_height="41dp"
        android:text="@string/btn_send_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="320dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_arrow_back_24" />
</androidx.constraintlayout.widget.ConstraintLayout>