<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUP">

    <TextView
        android:id="@+id/pwd_txt"
        android:layout_width="371dp"
        android:layout_height="29dp"
        android:text="@string/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="379dp" />

    <TextView
        android:id="@+id/pwdc_txt"
        android:layout_width="371dp"
        android:layout_height="29dp"
        android:text="@string/input_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="425dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="273dp"
        android:layout_height="203dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="371dp"
        android:layout_height="29dp"
        android:text="@string/input_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="295dp" />

    <TextView
        android:id="@+id/emailv_txt"
        android:layout_width="371dp"
        android:layout_height="29dp"
        android:text="@string/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="336dp" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="198dp"
        android:layout_height="40dp"
        android:text="@string/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="570dp" />

    <CheckBox
        android:id="@+id/accept_btn"
        android:layout_width="296dp"
        android:layout_height="60dp"
        android:text="@string/btn_accept_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdc_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>