<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirm_password">

    <TextView
        android:id="@+id/textView"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:text="@string/txt_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/conf_pwd"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:text="@string/input_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/conf_pwd"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:text="@string/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="103dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <Button
        android:id="@+id/sub_pwd_btn"
        android:layout_width="193dp"
        android:layout_height="35dp"
        android:text="@string/btn_submit_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="216dp" />

</androidx.constraintlayout.widget.ConstraintLayout>