<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="268dp"
        android:layout_height="129dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <CheckBox
        android:id="@+id/remember_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_remember_me"
        app:layout_constraintEnd_toStartOf="@+id/forget_btn"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdT" />

    <Button
        android:id="@+id/forget_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_forget_password"
        app:layout_constraintTop_toBottomOf="@+id/pwdT"
        app:rippleColor="#FDFDFD"
        tools:layout_editor_absoluteX="221dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="217dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_btn" />

    <TextView
        android:id="@+id/or_txt"
        android:layout_width="222dp"
        android:layout_height="28dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/txt_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="238dp"
        android:layout_height="41dp"
        android:layout_marginBottom="28dp"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="85dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_txt">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_btn_facebook" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_btn_google" />
    </LinearLayout>

    <TextView
        android:id="@+id/emailT"
        android:layout_width="298dp"
        android:layout_height="27dp"
        android:layout_marginTop="164dp"
        android:text="@string/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <TextView
        android:id="@+id/pwdT"
        android:layout_width="298dp"
        android:layout_height="27dp"
        android:layout_marginTop="48dp"
        android:text="@string/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailT" />
</androidx.constraintlayout.widget.ConstraintLayout>