<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    tools:contextClickable="false">

    <TextView
        android:id="@+id/verification_txt"
        android:layout_width="375dp"
        android:layout_height="28dp"
        android:text="@string/txt_verification_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="45dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="377dp"
        android:layout_height="67dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="80dp">

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:gravity="center"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:gravity="center"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextNumber3"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:gravity="center"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextNumber4"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:gravity="center"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="157dp"
        android:layout_height="39dp"
        android:text="@string/btn_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="171dp" />

    <TextView
        android:id="@+id/unrec_txt"
        android:layout_width="313dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/txt_unreception"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="230dp" />

    <Button
        android:id="@+id/resend_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="188dp"
        android:layout_height="35dp"
        android:text="@string/btn_resend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="270dp" />
</androidx.constraintlayout.widget.ConstraintLayout>